--- a/files/page1.html
+++ b/files/page1.html
@@ -19,7 +19,7 @@
 				<li>My favorite chess streamers are Hikaru Nakamura and agadmator.</li>
 			</ul>
 		</div>
-		<div><a href="../index.html">Return to Home</a></div>
+		<div><a href="../home.html">Return to Home</a></div>
 		<div><a href="page2.html"> Go to Page 2</a></div>
 		<div><a href="page3.html"> Go to Page 3</a></div>
 	</body>
