--- a/files/page2.html
+++ b/files/page2.html
@@ -19,7 +19,7 @@
 				<li>It is a fun activity that can be helpful on emergency situations.</li>
 			</ul>
 		</div>
-		<div><a href="../index.html">Return to Home</a></div>
+		<div><a href="../home.html">Return to Home</a></div>
 		<div><a href="page1.html">Go to Page 1</a></div>
 		<div><a href="page3.html">Go to Page 3</a></div>
 	</body>
