--- a/files/page3.html
+++ b/files/page3.html
@@ -19,7 +19,7 @@
 				<li>One struggling part of the game is when the shuttlecock gets stuck somewhere tall.</li>
 			</ul>
 		</div>
-		<div><a href="../index.html">Return to Home</a></div>
+		<div><a href="../home.html">Return to Home</a></div>
 		<div><a href="page1.html">Go to Page 1</a></div>
 		<div><a href="page2.html">Go to Page 2</a></div>
 	</body>
