--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<h1>My Favorite Sports</h1>
 		<hr>
 		<div>
-			<a href="fa1_paez/files/page1.html"><img src="./images/chess.jpg" height=200px width=200px title="Chess"></a>
-			<a href="fa1_paez/files/page2.html"><img src="./images/swimming.jpg" height=200px width=200px title="Swimming"></a>
-			<a href="fa1_paez/files/page3.html"><img src="./images/badminton.jpg" height=175px width=225px title="Badminton"></a>
+			<a href="files/page1.html"><img src="./images/chess.jpg" height=200px width=200px title="Chess"></a>
+			<a href="files/page2.html"><img src="./images/swimming.jpg" height=200px width=200px title="Swimming"></a>
+			<a href="files/page3.html"><img src="./images/badminton.jpg" height=175px width=225px title="Badminton"></a>
 		</div>
 		<p>Click on the pictures to know more about each sport!</p>
 	</body>
