--- a/AA2_paez/AA2_paez.html
+++ b/AA2_paez/AA2_paez.html
@@ -6,17 +6,17 @@
 			* {
 				box-sizing: border-box;
 			}
-			
+
 			p {
 				margin:0;
 				padding:0;
 			}
-			
+
 			body {
 				margin:0;
 				padding:0;
 			}
-			
+
 			#red {
 				position:relative;
 				top:200px;
@@ -28,21 +28,23 @@
 				display:inline-block;
 				padding:50px;
 			}
-			
-			#red:hover {
-				background-color: red;
-				color: white;
-				padding: 100px;
+		
+			#red:hover{
+				background: red;
+				color: white;				
+				transform:scale(2.0);
 			}
-			
-			#red:active {
-				background: url('sprite.png') no-repeat -414px -220px;
-				background-size: 840px 420px;
-				width: 100px;
+
+			#red:active{
+				background: url("sprite.png") no-repeat -210px -110px;
 				height: 100px;
-				color:transparent;
+				width: 100px;
 			}
-			
+
+			#red:active p{
+				display: none;
+			}
+
 			#blue {
 				position:relative;
 				top:200px;
@@ -54,25 +56,26 @@
 				display:inline-block;
 				padding:50px;
 			}
-			
-			#blue:hover {
-				background-color: blue;
+
+			#blue:hover{
+				background: blue;
 				color: white;
-				padding: 100px;
+				transform:scale(2.0);
 			}
-			
-			#blue:active {
-				background: url('sprite.png') no-repeat -623px -220px;
-				background-size: 840px 420px;
-				width: 100px;
+
+			#blue:active{
+				background: url("sprite.png") no-repeat -315px -110px;
 				height: 100px;
-				color:transparent;
+				width: 100px;
+			}
+
+			#blue:active p{
+				display: none;
 			}
 		</style>
 	</head>
-	
 	<body>
-		<div id="red" > <p> RED </p> </div>
-		<div id="blue" > <p> BLUE </p></div>
+		<div id="red"> <p> RED </p> </div>
+		<div id="blue"> <p> BLUE </p></div>
 	</body>
 </html>
